REGRESSION(267604@main): Causes PLT regressions https://bugs.webkit.org/show_bug.cgi?id=261166 rdar://problem/114993825

Unreviewed, revert due to PLT regressions.

Reverts:
267632@main  REGRESSION(267604@main) Tiles sometimes render upside down
267604@main  Some ImageBufferBackend implementations use resolutionScale

Canonical link: https://commits.webkit.org/267642@main