Source/WebCore/platform/graphics/cg/ImageBufferCGBackend.h
@@ -43,11 +43,13 @@ public:
 
 protected:
     using ImageBufferBackend::ImageBufferBackend;
+    void applyBaseTransform(GraphicsContextCG&) const;
 
     std::unique_ptr<ThreadSafeImageBufferFlusher> createFlusher() override;
 
     String debugDescription() const override;
 
+    bool originAtBottomLeftCorner() const override;
     mutable std::unique_ptr<GraphicsContextCG> m_context;
 };
 
